Add docs structure to the repo and place for templates recipes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "ag": "./cli.js"
     },
     "scripts": {
-        "docs": "jsdoc2md lib/generator.js > API.md"
+        "docs": "jsdoc2md lib/generator.js > docs/api.md"
     },
     "preferGlobal": true,
     "bugs": {
