--- a/test/docs/streetlights.yml
+++ b/test/docs/streetlights.yml
@@ -19,6 +19,13 @@ servers:
     url: mqtt://test.mosquitto.org
     protocol: mqtt
     description: Test broker
+    variables:
+      port:
+        description: Secure connection (TLS) is available through port 8883.
+        default: '1883'
+        enum:
+          - '1883'
+          - '8883'
 
 defaultContentType: application/json
 
