--- a/templates/nodejs/config/common.yml
+++ b/templates/nodejs/config/common.yml
@@ -4,7 +4,7 @@ default:
     version: {{ asyncapi.info().version() }}
 {% if asyncapi.server(params.server).protocol() === "ws" %}
   ws:
-    port: {{ asyncapi.server(params.server).url() | port(80) }}
+    port: {{ asyncapi.server(params.server).url() | replaceVariablesWithValues(asyncapi.server(params.server).variables()) | port(80) }}
     path: /ws
     topicSeparator: '__'
 {% endif %}
