Convert templates in packages (#219)
* Make html a package

* Install template deps

* Migrate templates

* Improve ignored files code

* Update docs

* Update API docs

* Improve --force-install description on CLI.

Co-Authored-By: Lukasz Gornicki <lpgornicki@gmail.com>

* Improve --force-install description on README.

Co-Authored-By: Lukasz Gornicki <lpgornicki@gmail.com>

* Remove unnecessary shouldIgnoreFile check

* Update package-lock.json

* Add npmi dependency

* Unify the way we document defaults

* Fix linting issues

* Defend against non-existing templates

* Check for template directory and pacakge.json file

Co-authored-by: Lukasz Gornicki <lpgornicki@gmail.com>

--- a/templates/html/package.json
+++ b/templates/html/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@asyncapi/nodejs-ws-template",
+  "name": "@asyncapi/html-template",
   "version": "0.1.0",
-  "description": "Node.js WebSockets template for AsyncAPI generator.",
+  "description": "HTML template for the AsyncAPI generator.",
   "keywords": [
     "asyncapi",
     "generator",
-    "nodejs",
-    "websockets",
-    "ws",
+    "html",
     "template"
   ],
   "author": "Fran Mendez <fmvilas@gmail.com> (fmvilas.com)",
   "license": "Apache-2.0",
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "markdown-it": "^10.0.0",
+    "openapi-sampler": "^1.0.0-beta.15"
   }
 }
