--- a/templates/markdown/package.json
+++ b/templates/markdown/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "@asyncapi/nodejs-ws-template",
+  "name": "@asyncapi/markdown-template",
   "version": "0.1.0",
-  "description": "Node.js WebSockets template for AsyncAPI generator.",
+  "description": "Markdown template for the AsyncAPI generator.",
   "keywords": [
     "asyncapi",
     "generator",
-    "nodejs",
-    "websockets",
-    "ws",
+    "markdown",
     "template"
   ],
   "author": "Fran Mendez <fmvilas@gmail.com> (fmvilas.com)",
   "license": "Apache-2.0",
   "dependencies": {
-    "lodash": "^4.17.15"
+    "markdown-it": "^10.0.0",
+    "openapi-sampler": "^1.0.0-beta.15"
   }
 }
