--- a/package.json
+++ b/package.json
@@ -39,11 +39,10 @@
         "jmespath": "^0.15.0",
         "js-yaml": "^3.13.1",
         "klaw-sync": "^6.0.0",
-        "lodash": "^4.17.15",
         "markdown-it": "^8.4.1",
         "minimatch": "^3.0.4",
+        "npmi": "^4.0.0",
         "nunjucks": "^3.2.0",
-        "openapi-sampler": "^1.0.0-beta.9",
         "simple-git": "^1.131.0"
     },
     "devDependencies": {
