--- a/templates/java-spring/package.json
+++ b/templates/java-spring/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@asyncapi/nodejs-ws-template",
+  "name": "@asyncapi/java-spring-template",
   "version": "0.1.0",
-  "description": "Node.js WebSockets template for AsyncAPI generator.",
+  "description": "Java Spring template for AsyncAPI generator.",
   "keywords": [
     "asyncapi",
     "generator",
-    "nodejs",
-    "websockets",
-    "ws",
+    "java",
+    "spring",
     "template"
   ],
   "author": "Fran Mendez <fmvilas@gmail.com> (fmvilas.com)",
