Add support for server variables in Nodejs template (#227)
* Add missing docs about hooks and partials
* Add support for variables in URL

Co-Authored-By: Fran Méndez <fmvilas@gmail.com>

--- a/test/docs/streetlights.yml
+++ b/test/docs/streetlights.yml
@@ -16,9 +16,16 @@ info:
 
 servers:
   production:
-    url: mqtt://test.mosquitto.org
+    url: mqtt://test.mosquitto.org:{port}
     protocol: mqtt
     description: Test broker
+    variables:
+      port:
+        description: Secure connection (TLS) is available through port 8883.
+        default: '1883'
+        enum:
+          - '1883'
+          - '8883'
 
 defaultContentType: application/json
 
