--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,10 +12,7 @@ jobs:
   pr-title:
     runs-on: ubuntu-latest
     steps:
-    - name: conventional-pr-title
-      uses: aslafy-z/conventional-pr-title-action@v2.2.0
-      with:
-        success-state: ':heart: Pull request title follows the Conventional Commits specification.'
-        failure-state: ':broken_heart: Pull request title does not follow the the Conventional Commits specification. Consult the contribution guide.'
+    - name: 'Check for PR title with conventional commits'
+      uses: amannn/action-semantic-pull-request@v1.1.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
