--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Validating PR
+name: Verifying PR
 
 on:
   pull_request:
@@ -12,7 +12,11 @@ jobs:
   pr-title-check:
     runs-on: ubuntu-latest
     steps:
-    - name: 'Check for PR title with conventional commits'
-      uses: amannn/action-semantic-pull-request@v1.1.1
+    - name: Checking PR title 
+      uses: aslafy-z/conventional-pr-title-action@v2.2.0
+      with:
+        success-state: 'Pull request title follows the Conventional Commits specification.'
+        failure-state: 'Pull request title does not follow the the Conventional Commits specification. Consult the contribution guide.'
+        context-name: Checking PR title 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
