--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Checking PR title 
       uses: aslafy-z/conventional-pr-title-action@v2.2.0
       with:
-        success-state: :heart: Pull request title follows the Conventional Commits specification.
-        failure-state: 'Pull request title does not follow the the Conventional Commits specification. Consult the contribution guide.'
+        success-state: Pull request title follows the Conventional Commits specification.
+        failure-state: Pull request title does not follow the the Conventional Commits specification. Consult the contribution guide.
         context-name: Checking PR title 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
