--- a/templates/nats-ts/package.json
+++ b/templates/nats-ts/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "{{ asyncapi.info().title() | kebabCase }}",
-  "description": "{{ asyncapi.info().description() | oneLine }}",
-  "version": "{{ asyncapi.info().version() }}",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "watch": "tsc --watch",
-    "build": "tsc",
-    "start": "node src/api/index.js",
-    "postinstall": "link-module-alias"
-  },
-  "_moduleAliasIgnoreWarning": true,
-  "_moduleAliases": {
-    "#messages": "./src/messages",
-    "#schemas": "./src/schema",
-    "#channels": "./src/channels"
-  },
+  "name": "@asyncapi/nats-ts-template",
+  "version": "0.1.0",
+  "description": "Nats typescript template for the AsyncAPI generator.",
+  "keywords": [
+    "asyncapi",
+    "generator",
+    "ts",
+    "nats",
+    "template"
+  ],
+  "author": "Jonas Lagoni (jonas-lt@live.dk)",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@types/uuid": "3.4.5",
-    "link-module-alias": "^1.2.0",
-    "msgpack-lite": "^0.1.26",
-    "ts-nats": "1.2.4",
-    "node-yaml-config": "0.0.5",
-    "typescript": "3.4.3",
-    "uuid": "3.3.3",
-    "winston": "3.2.1",
-    "winston-daily-rotate-file": "3.10.0"
+    "filenamify": "^4.1.0",
+    "lodash": "^4.17.15"
   }
 }
