--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "ag": "./cli.js"
     },
     "scripts": {
-        "docs": "jsdoc2md lib/generator.js > docs/api.md"
+        "docs": "jsdoc2md lib/generator.js > docs/api.md",
+        "release": "semantic-release --no-ci"
     },
     "preferGlobal": true,
     "bugs": {
@@ -46,7 +47,33 @@
         "simple-git": "^1.131.0"
     },
     "devDependencies": {
+        "@semantic-release/commit-analyzer": "^8.0.1",
+        "@semantic-release/git": "^9.0.0",
+        "@semantic-release/github": "^7.0.4",
+        "@semantic-release/npm": "^7.0.3",
+        "@semantic-release/release-notes-generator": "^9.0.1",
         "chokidar": "^3.3.0",
-        "jsdoc-to-markdown": "^5.0.0"
+        "jsdoc-to-markdown": "^5.0.0",
+        "semantic-release": "^17.0.4"
+    },
+    "release": {
+        "branches": [
+            "master"
+        ],
+        "plugins": [
+            "@semantic-release/npm",
+            "@semantic-release/github",
+            "@semantic-release/commit-analyzer",
+            "@semantic-release/release-notes-generator",
+            [
+              "@semantic-release/git",
+              {
+                "assets": [
+                    "package.json, package-lock.json"
+                ],
+                "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
+              }
+            ]
+          ]
     }
 }
