--- a/.github/workflows/pr-automerge.yml
+++ b/.github/workflows/pr-automerge.yml
@@ -22,5 +22,15 @@ jobs:
     steps:
       - name: automerge
         uses: "pascalgn/automerge-action@ccae530ae13b6af67a7a2009c266fe925844e658"
+        with:
+          args: "--trace"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: "automerge"
+          MERGE_REMOVE_LABELS: "automerge"
+          MERGE_METHOD: "squash"
+          MERGE_COMMIT_MESSAGE: "pull-request-description"
+          MERGE_FORKS: "true"
+          MERGE_RETRIES: "10"
+          MERGE_RETRY_SLEEP: "10000"
+          UPDATE_METHOD: "rebase"
