--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "asyncapi-generator",
+    "name": "asyncapi-generator-test",
     "version": "0.32.0",
     "description": "The AsyncAPI generator. It can generate documentation, code, anything!",
     "main": "./lib/generator.js",
@@ -8,7 +8,11 @@
         "ag": "./cli.js"
     },
     "scripts": {
-        "docs": "jsdoc2md lib/generator.js > docs/api.md"
+        "docs": "jsdoc2md lib/generator.js > docs/api.md",
+        "release": "semantic-release",
+        "docker-build": "docker build -t derberg/generator:latest .",
+        "get-version": "echo $npm_package_version"
+
     },
     "preferGlobal": true,
     "bugs": {
@@ -46,7 +50,44 @@
         "simple-git": "^1.131.0"
     },
     "devDependencies": {
+        "@semantic-release/commit-analyzer": "^8.0.1",
+        "@semantic-release/git": "^9.0.0",
+        "@semantic-release/github": "^7.0.4",
+        "@semantic-release/npm": "^7.0.3",
+        "@semantic-release/release-notes-generator": "^9.0.1",
         "chokidar": "^3.3.0",
-        "jsdoc-to-markdown": "^5.0.0"
-    }
+        "conventional-changelog-conventionalcommits": "^4.2.3",
+        "jsdoc-to-markdown": "^5.0.0",
+        "semantic-release": "^17.0.4"
+    },
+    "release": {
+        "branches": [
+          "master"
+        ],
+        "plugins": [
+          [
+            "@semantic-release/commit-analyzer",
+            {
+              "preset": "conventionalcommits"
+            }
+          ],
+          [
+            "@semantic-release/release-notes-generator",
+            {
+              "preset": "conventionalcommits"
+            }
+          ],
+          "@semantic-release/npm",
+          "@semantic-release/github",
+          [
+            "@semantic-release/git",
+            {
+              "assets": [
+                "package.json", "package-lock.json"
+              ],
+              "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
+            }
+          ]
+        ]
+      }
 }
