--- a/.github/workflows/pr-automerge.yml
+++ b/.github/workflows/pr-automerge.yml
@@ -20,10 +20,8 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
-      - name: automerge
-        uses: "pascalgn/automerge-action@ccae530ae13b6af67a7a2009c266fe925844e658"
-        with:
-          args: "--trace"
+      - name: Automerging if all conditions are met
+        uses: "pascalgn/automerge-action@v0.7.5"
         env:
           GITHUB_TOKEN: "${{ secrets.GH_TOKEN }}"
           MERGE_LABELS: "automerge"
