--- a/.github/workflows/pr-automerge.yml
+++ b/.github/workflows/pr-automerge.yml
@@ -22,12 +22,14 @@ jobs:
     steps:
       - name: Automerging if all conditions are met
         uses: "pascalgn/automerge-action@v0.7.5"
+        with:
+          args: "--trace"
         env:
           GITHUB_TOKEN: "${{ secrets.GH_TOKEN }}"
           MERGE_LABELS: "automerge"
           MERGE_REMOVE_LABELS: "automerge"
           MERGE_METHOD: "squash"
-          MERGE_COMMIT_MESSAGE: "pull-request-description"
+          MERGE_COMMIT_MESSAGE: "pull-request-title"
           MERGE_FORKS: "true"
           MERGE_RETRIES: "10"
           MERGE_RETRY_SLEEP: "10000"
