--- a/.github/workflows/pr-automerge.yml
+++ b/.github/workflows/pr-automerge.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Automerging if all conditions are met
         uses: "pascalgn/automerge-action@v0.7.5"
         env:
-          GITHUB_TOKEN: "${{ secrets.GH_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           GITHUB_LOGIN: asyncapi-bot
           MERGE_LABELS: "automerge"
           MERGE_REMOVE_LABELS: "automerge"
