docs: conventional commits test (#6)
docs: conventional commits test

--- a/.github/workflows/pr-automerge.yml
+++ b/.github/workflows/pr-automerge.yml
@@ -20,12 +20,11 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
-      - name: automerge
-        uses: "pascalgn/automerge-action@ccae530ae13b6af67a7a2009c266fe925844e658"
-        with:
-          args: "--trace"
+      - name: Automerging if all conditions are met
+        uses: "pascalgn/automerge-action@v0.7.5"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_LOGIN: asyncapi-bot
           MERGE_LABELS: "automerge"
           MERGE_REMOVE_LABELS: "automerge"
           MERGE_METHOD: "squash"
