--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     },
     "preferGlobal": true,
     "bugs": {
-        "url": "https://github.com/asyncapi/generator/issues"
+        "url": "https://github.com/derberg/generator/issues"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/asyncapi/generator.git"
+        "url": "git://github.com/derberg/generator.git"
     },
     "keywords": [
         "asyncapi",
@@ -33,7 +33,7 @@
         "email": "fmvilas@gmail.com"
     },
     "license": "Apache-2.0",
-    "homepage": "https://github.com/asyncapi/generator",
+    "homepage": "https://github.com/derberg/generator",
     "dependencies": {
         "ajv": "^6.10.2",
         "asyncapi-parser": "^0.14.0",
