--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,8 @@ on:
       - master
 
 jobs:
-  #This job with support of semantic-release checks if release is needed, bumps package.json, tags repo, pushes package to NPM and create GitHub Release with proper changelog
-  release-npm-github:
-    name: Release to NPM and GitHub
+  release:
+    name: 'Release NPM, GitHub, Docker'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -19,23 +18,15 @@ jobs:
           node-version: 13
       - name: Install dependencies
         run: npm ci
-      - name: Release
+      - name: Release to NPM and GitHub
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GIT_AUTHOR_NAME: asyncapi-bot
-          GIT_AUTHOR_EMAIL: info@asyncapi.io
+          GIT_AUTHOR_EMAIL: derberg@wp.pl
           GIT_COMMITTER_NAME: asyncapi-bot
-          GIT_COMMITTER_EMAIL: info@asyncapi.io
+          GIT_COMMITTER_EMAIL: derberg@wp.pl
         run: npm run release
-  #This job creates and pushes a new Docker image to the registry. Runs after the release to NPM and GitHub
-  release-docker:
-    needs: release-npm-github
-    name: Release to Docker
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
       - name: Login to Docker registry
         run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
       - name: Get version from package.json
