--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "asyncapi-generator-test",
+    "name": "@asyncapi/asyncapi-generator",
     "version": "0.32.0",
     "description": "The AsyncAPI generator. It can generate documentation, code, anything!",
     "main": "./lib/generator.js",
@@ -16,11 +16,11 @@
     },
     "preferGlobal": true,
     "bugs": {
-        "url": "https://github.com/derberg/generator/issues"
+        "url": "https://github.com/asyncapi/generator/issues"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/derberg/generator.git"
+        "url": "git://github.com/asyncapi/generator.git"
     },
     "keywords": [
         "asyncapi",
@@ -33,7 +33,7 @@
         "email": "fmvilas@gmail.com"
     },
     "license": "Apache-2.0",
-    "homepage": "https://github.com/derberg/generator",
+    "homepage": "https://github.com/asyncapi/generator",
     "dependencies": {
         "ajv": "^6.10.2",
         "asyncapi-parser": "^0.14.0",
