--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "license": "Apache-2.0",
     "homepage": "https://github.com/asyncapi/generator",
     "dependencies": {
+        "@asyncapi/openapi-schema-parser": "^1.0.0",
+        "@asyncapi/raml-dt-schema-parser": "^1.0.4",
         "ajv": "^6.10.2",
         "asyncapi-parser": "^0.14.0",
         "commander": "^2.12.2",
