--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "license": "Apache-2.0",
     "homepage": "https://github.com/asyncapi/generator",
     "dependencies": {
+        "@asyncapi/openapi-schema-parser": "^1.0.0",
+        "@asyncapi/raml-dt-schema-parser": "^1.0.4",
         "ajv": "^6.10.2",
-        "asyncapi-parser": "^0.14.0",
+        "asyncapi-parser": "^0.15.0",
         "commander": "^2.12.2",
         "filenamify": "^4.1.0",
         "fs.extra": "^1.3.2",
