--- a/.github/workflows/automerge-release-pr-bump.yml
+++ b/.github/workflows/automerge-release-pr-bump.yml
@@ -3,7 +3,21 @@ name: Automerge release bump PR
 on:
   pull_request:
     types:
+      - labeled
+      - unlabeled
+      - synchronize
       - opened
+      - edited
+      - ready_for_review
+      - reopened
+      - unlocked
+  pull_request_review:
+    types:
+      - submitted
+  check_suite: 
+    types:
+      - completed
+  status: {}
   
 jobs:
 
