--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
   "homepage": "https://github.com/asyncapi/generator",
   "dependencies": {
     "@asyncapi/openapi-schema-parser": "^1.0.0",
+    "@asyncapi/parser": "^0.16.0",
     "@asyncapi/raml-dt-schema-parser": "^1.0.4",
     "ajv": "^6.10.2",
-    "@asyncapi/parser": "^0.16.0",
     "commander": "^2.12.2",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
@@ -50,6 +50,7 @@
     "klaw-sync": "^6.0.0",
     "markdown-it": "^8.4.1",
     "minimatch": "^3.0.4",
+    "mkdirp": "^1.0.3",
     "npmi": "^4.0.0",
     "nunjucks": "^3.2.0",
     "simple-git": "^1.131.0"
