--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "minimatch": "^3.0.4",
     "npmi": "^4.0.0",
     "nunjucks": "^3.2.0",
+    "semver": "^7.3.2",
     "simple-git": "^1.131.0"
   },
   "devDependencies": {
