Add first round of tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,13 @@
 env:
   node: true
   es6: true
+  jest/globals: true
 
-plugins: 
+plugins:
   - sonarjs
+  - jest
 
-extends: 
+extends:
   - plugin:sonarjs/recommended
 
 parserOptions:
