--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": ">=6.13.7"
   },
   "scripts": {
+    "test": "jest",
     "docs": "jsdoc2md lib/generator.js > docs/api.md",
     "release": "semantic-release",
     "docker-build": "docker build -t asyncapi/generator:latest .",
@@ -67,7 +68,10 @@
     "chokidar": "^3.3.0",
     "conventional-changelog-conventionalcommits": "^4.2.3",
     "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-sonarjs": "^0.5.0",
+    "jest": "^25.5.0",
+    "jest-file-snapshot": "^0.3.8",
     "jsdoc-to-markdown": "^5.0.0",
     "semantic-release": "^17.0.4",
     "semantic-release-slack-bot": "^1.5.0"
