Move cognitive complexity rule to .eslintrc and make it a warning not an error

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@ rules:
   consistent-this: [0, self]
   func-style: 0
   max-nested-callbacks: 0
+  camelcase: 0
 
   # Warnings
   no-debugger: 1
@@ -35,7 +36,7 @@ rules:
   no-unused-expressions: 1
   no-native-reassign: 1
   no-fallthrough: 1
-  camelcase: 0
+  sonarjs/cognitive-complexity: 1
 
   # Errors
   eqeqeq: 2
