--- a/.github/workflows/pull-request-testing.yml
+++ b/.github/workflows/pull-request-testing.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run linter
-        run: npm run eslint
+        run: npm run lint
       - name: Run tests
         run: npm test
