--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@asyncapi/parser": "^0.18.3",
     "@asyncapi/raml-dt-schema-parser": "^1.0.4",
     "ajv": "^6.10.2",
+    "all-contributors-cli": "^6.14.2",
     "commander": "^2.12.2",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
