chore: add github action to check if list of templates is up to date

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,3 @@
 output
 node_modules
-templates/html/js/highlight.min.js
-templates/nodejs/src/
-templates/nodejs-ws/src/
+.github/templates-list-validator/dist
