chore: specify action source code location

--- a/.github/workflows/templates-list-validation.yml
+++ b/.github/workflows/templates-list-validation.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-      - uses: ./
+      - uses: ./.github/templates-list-validator
         with:
           token: ${{ secrets.GITHUB_TOKEN }} 
