chore: fix yaml

--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -1,4 +1,4 @@
-name: Update generated parts of documentation on docs: commits
+name: 'Update generated parts of documentation on docs: commits'
 
 on:
   pull_request:
