--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Generate README ToC
         run: npm run gen-readme-toc
       - name: console.log event 
-        run: echo ${{ github.event}}
+        run: echo ${{ github.event.pull_request.title}}
      # - name: Create Pull Request with updated docs
       #  uses: peter-evans/create-pull-request@v2.4.4
        # with:
