--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -37,7 +37,10 @@ jobs:
       - name: Generate README ToC
         run: npm run gen-readme-toc
       - name: console.log event 
-        run: echo ${{ github.event.pull_request.title}}
+        # PR should be created within this GH action only if it is a docs: commit
+        # Otherwise it will conflict with release workflow
+        if: github.event.pull_request.title == docs:*
+        run: echo "we did it!"
      # - name: Create Pull Request with updated docs
       #  uses: peter-evans/create-pull-request@v2.4.4
        # with:
