--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "release": "semantic-release",
     "docker-build": "docker build -t asyncapi/generator:latest .",
     "get-version": "echo $npm_package_version",
-    "lint": "eslint --config .eslintrc ."
+    "lint": "eslint --config .eslintrc .",
+    "lint-tpl-validator": "eslint --fix --config .eslintrc .github/templates-list-validator",
+    "gen-readme-toc": "markdown-toc -i README.md"
   },
   "preferGlobal": true,
   "bugs": {
@@ -48,6 +50,7 @@
     "@asyncapi/parser": "^0.18.3",
     "@asyncapi/raml-dt-schema-parser": "^1.0.4",
     "ajv": "^6.10.2",
+    "all-contributors-cli": "^6.14.2",
     "commander": "^2.12.2",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
@@ -74,6 +77,7 @@
     "eslint-plugin-sonarjs": "^0.5.0",
     "jest": "^25.5.0",
     "jsdoc-to-markdown": "^5.0.0",
+    "markdown-toc": "^1.2.0",
     "semantic-release": "^17.0.4",
     "semantic-release-slack-bot": "^1.5.0"
   },
