--- a/package.json
+++ b/package.json
@@ -56,14 +56,15 @@
     "fs.extra": "^1.3.2",
     "jmespath": "^0.15.0",
     "js-yaml": "^3.13.1",
+    "levenshtein-edit-distance": "^2.0.5",
+    "loglevel": "^1.6.8",
     "markdown-it": "^8.4.1",
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
     "npmi": "^4.0.0",
     "nunjucks": "^3.2.0",
     "semver": "^7.3.2",
-    "simple-git": "^1.131.0",
-    "levenshtein-edit-distance": "^2.0.5"
+    "simple-git": "^1.131.0"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
