--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asyncapi/generator",
-  "version": "1.0.0-rc.7",
+  "version": "1.0.0-rc.8",
   "description": "The AsyncAPI generator. It can generate documentation, code, anything!",
   "main": "./lib/generator.js",
   "bin": {
@@ -48,7 +48,7 @@
   "dependencies": {
     "@asyncapi/avro-schema-parser": "^0.1.2",
     "@asyncapi/openapi-schema-parser": "^2.0.0",
-    "@asyncapi/parser": "^0.28.1",
+    "@asyncapi/parser": "^1.0.0-rc.1",
     "@asyncapi/raml-dt-schema-parser": "^2.0.0",
     "ajv": "^6.10.2",
     "all-contributors-cli": "^6.14.2",
