--- a/.github/workflows/pull-request-testing.yml
+++ b/.github/workflows/pull-request-testing.yml
@@ -20,3 +20,5 @@ jobs:
         run: npm run lint
       - name: Run tests
         run: npm test
+      - name: Regenerate docs to make sure jsdoc are not broken
+        run: npm run docs
