--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: 13
       - name: Install dependencies
         run: npm ci
+      - name: Run tests
+        run: npm test
       - name: Regenerate docs
         run: npm run docs
       - name: Generate README ToC
