--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "markdown-it": "^10.0.0",
-    "openapi-sampler": "^1.0.0-beta.15"
+    "openapi-sampler": "1.0.0-beta.17"
   },
   "ava": {
     "files": [
