--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,7 @@ jobs:
         if: steps.initversion.outputs.version != steps.extractver.outputs.version
         run: | 
           echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
+          sleep 10s #docker image installs generator from npm, this sleep protects this step from any delays on npm side
           npm run docker-build
           docker tag asyncapi/generator:latest asyncapi/generator:${{ steps.extractver.outputs.version }}
           docker push asyncapi/generator:${{ steps.extractver.outputs.version }}
